app02 with priviledged
Signed-off-by: Marcin Krasowski <marcin.krasowski@gmail.com>